--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://hikmethankolay.github.io/quizzical-with-react/",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
